tabble adjustments
