# internal/core/raffle/entitities.go
@@ -13,9 +13,9 @@ type Request struct {
 type Raffle struct {
 	ID          string      `json:"id"  example:"61f0c143ad06223fa03910b0"`
 	Name        string      `json:"name"  example:"Rifa"`
-	Description string      `json:"description"  example:"Rifa"`
+	Description string      `json:"description"  example:"Rifa description"`
 	Slug        string      `json:"slug"  example:"butterfly-32"`
-	Status      Status      `json:"status"  example:"Open"`
+	Status      Status      `json:"status"  example:"open"`
 	ImageURL    string      `json:"imageURL"  example:"1"`
 	UnitPrice   int         `json:"unitPrice"  example:"5"`
 	Quantity    int         `json:"quantity"  example:"10"`
@@ -23,18 +23,21 @@ type Raffle struct {
 }
 
 type Variation struct {
-	ID     string `json:"id"  example:"61f0c143ad06223fa03910b0"`
-	Number int    `json:"number"  example:"5"`
-	Name   string `json:"name"  example:"Number"`
-	Status Status `json:"status"  example:"paid"`
+	ID     string     `json:"id"  example:"61f0c143ad06223fa03910b0"`
+	Number int        `json:"number"  example:"5"`
+	Name   string     `json:"name"  example:"Number"`
+	Status ItemStatus `json:"status"  example:"paid"`
 }
 
-type Status string
+type (
+	ItemStatus string
+	Status     string
+)
 
 const (
-	Paid      Status = "paid"
-	Pending   Status = "pending"
-	Available Status = "available"
-	Open      Status = "open"
-	Cloed     Status = "closed"
+	Paid      ItemStatus = "paid"
+	Pending   ItemStatus = "pending"
+	Available ItemStatus = "available"
+	Open      Status     = "open"
+	Cloed     Status     = "closed"
 )
